change html code to make it easily readable & change css code to correct the ui

--- a/08_TodoApp/todoAppStyle.css
+++ b/08_TodoApp/todoAppStyle.css
@@ -83,7 +83,7 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--white);
-    border-radius: 15px;
+    border-radius: 8px;
     padding: 15px;
     width: 300px;
     height: 350px;
